# spazio-grigio-bot

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  coverage.yml
docs/: commands.txt
src/: main.rs
src/irina/: answer.rs  automatize.rs  commands.rs  config.rs  instagram.rs  mod.rs  morning_routine.rs  newsletter.rs  redis.rs  repository.rs  rsshub.rs  youtube.rs
src/mail/: errors.rs  message.rs  mod.rs
src/redis/: mod.rs
src/rsshub/: mod.rs
src/youtube/: mod.rs
